--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libp2p-interfaces",
+  "name": "@galtproject/libp2p-interfaces",
   "version": "0.5.1",
   "description": "Interfaces for JS Libp2p",
   "leadMaintainer": "Jacob Heun <jacobheun@gmail.com>",
