--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
       ]
     }
   },
+  "eslintConfig": {
+    "extends": "ipfs"
+  },
   "scripts": {
     "prepare": "aegir build --no-bundle",
     "lint": "aegir lint",
